experiments with underline for nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,30 +8,30 @@ nav {
 }
 
 .welcome {
-    color: white;
-    background-color: #00917C;
-    height: 100vh;
-    text-align: center;
+  color: white;
+  background-color: #00917c;
+  height: 100vh;
+  text-align: center;
 }
 
-.welcome h1{
-    font-family: 'Playfair Display', serif;
-    /* font-weight: 400; */
-    font-size: 8rem;
-    padding-top: 30vh;
+.welcome h1 {
+  font-family: "Playfair Display", serif;
+  /* font-weight: 400; */
+  font-size: 8rem;
+  padding-top: 30vh;
 }
 
-.welcome h2{
-    font-family: 'Playfair Display', serif;
-    font-weight: 400;
-    font-style: italic;
-    padding-top: 3rem;;
-    font-size: 3rem;
+.welcome h2 {
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+  font-style: italic;
+  padding-top: 3rem;
+  font-size: 3rem;
 }
 
-
-
-
+.nav-item:hover {
+  text-decoration: underline;
+}
 
 /*
 Comments: 
