--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,30 @@ nav {
   font-size: 3rem;
 }
 
-.nav-item:hover {
-  text-decoration: underline;
+.nav-link{
+  /* text-decoration: underline; */
+  position:relative;
 }
+
+.nav-link::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 0.175rem;
+    left: 0;
+    bottom: 0;
+    background: #00917c;
+
+    transform: scale(0,1);
+    transition: transform 0.3s ease;
+}
+
+.nav-link:hover::after{
+    transform: scale(1, 1);
+}
+
+
+
 
 .nav-link{
     font-family: "Playfair Display", serif;
@@ -43,6 +64,9 @@ nav {
     }
     .welcome h2 {
         font-size: 2rem;
+    }
+    .nav-link::after{
+        width: 15%;
     }
 }
 /*
