--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 :root {
   --header-bg-color:#fde8cd;
-  --welcome-bg-color: #00917c; 
-  --tech-bg-color: #E9FEF8;
+  --primary-color: #00917c; 
+  --secondary-color: #E9FEF8;
+  --tertiary-color: ;
 }
 
 * {
@@ -13,13 +14,14 @@ h1{
   font-family: "Playfair Display", serif;
 }
 
+/* navigation */
 nav {
-  background-color: var(--welcome-bg-color);
+  background-color: var(--primary-color);
 }
 
 .welcome {
   color: white;
-  background-color: var(--welcome-bg-color);
+  background-color: var(--primary-color);
   height: 90vh;
   text-align: center;
   position: relative;
@@ -27,7 +29,6 @@ nav {
 
 .welcome h1 {
   font-family: "Playfair Display", serif;
-  /* font-weight: 400; */
   font-size: 8rem;
   padding-top: 30vh;
 }
@@ -57,12 +58,12 @@ nav {
 }
 
 .waves .shape-fill {
-    fill: var(--welcome-bg-color);
+    fill: var(--primary-color);
 }
 
 .nav-link{
-  /* text-decoration: underline; */
   position:relative;
+  font-family: "Playfair Display", serif;
 }
 
 .nav-link::after{
@@ -78,14 +79,8 @@ nav {
     transition: transform 0.3s ease;
 }
 
-
-
 .nav-link:hover::after{
     transform: scale(1, 1);
-}
-
-.nav-link{
-    font-family: "Playfair Display", serif;
 }
 
 .welcome:hover .arrow{
@@ -98,9 +93,9 @@ nav {
   transition: transform 1s ease-in-out;
 }
 
-
+/* tech section */
 .tech{
-  background-color: var(--tech-bg-color);
+  background-color: var(--secondary-color);
   padding-top: 10rem;
   text-align: center;
   position: relative;
@@ -126,15 +121,79 @@ nav {
 }
 
 .fa-html5:hover {
-  color: red;
+  color: #e34c26;
+}
+
+.fa-css3-alt:hover{
+color:#0065ff;
+}
+
+.fa-js:hover{
+  color: #d8c12e;
+}
+
+.fa-sass:hover{
+  color: #CD6799;
+}
+
+/* about section */
+
+.about{
+  background-color: #D5D0F6;
 }
 
 .about h1{
   text-align: center;
+  padding-top: 2rem;
 }
 
+.about p{
+  padding: 2rem 5rem 2rem 5rem;
+  margin-bottom: 0;
+}
 
+/* Portfolio */
 
+.portfolio{
+  background-color: var(--header-bg-color);
+  margin-bottom: 0;
+  padding-bottom: 10px;
+}
+
+.card {
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px;
+}
+.portfolio h1{
+  text-align: center;
+  margin-bottom: 0;
+  padding: 2rem;
+}
+
+/* Contact */
+.contact{
+  background-color: var(--primary-color);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.contact h1{
+  text-align: center;
+  padding: 2rem;
+  margin-bottom: 0;
+  color: #fff;
+}
+
+.contact-icons{
+  padding-bottom: .5rem;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.contact i{
+    padding-right: 2rem;
+}
 
 
 @media all and (max-width: 900px){
