--- a/css/styles.css
+++ b/css/styles.css
@@ -109,8 +109,8 @@ nav {
 }
 
 .tech-icons{
-  margin-top: 5rem;
-  padding-bottom: 3rem;
+  margin-top: 2rem;
+  padding-bottom: 0;
   font-size: 5rem;
   text-align: center;
 }
@@ -119,6 +119,7 @@ nav {
   text-align: center;
   margin-right: 4rem;
 }
+
 
 .fa-html5:hover {
   color: #e34c26;
@@ -136,15 +137,54 @@ color:#0065ff;
   color: #CD6799;
 }
 
-/* about section */
+.slantedDivA{
+  position: relative;
+  width:100%;
+  height: 500px;
+  background: var(--secondary-color);
+}
 
+.slantedDivA::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform-origin: top left;
+  transform: skewY(5deg);
+}
+
+/* about section */
+.waves-1 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.waves-1 svg {
+    position: relative;
+    display: block;
+    width: calc(128% + 1.3px);
+    height: 66px;
+}
+
+.waves-1 .shape-fill {
+    fill: var(--secondary-color);
+}
 .about{
   background-color: #D5D0F6;
 }
 
 .about h1{
   text-align: center;
-  padding-top: 2rem;
+  padding-top: 4rem;
 }
 
 .about p{
@@ -153,6 +193,25 @@ color:#0065ff;
 }
 
 /* Portfolio */
+.waves-2 {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.waves-2 svg {
+    position: relative;
+    display: block;
+    width: calc(128% + 1.3px);
+    height: 66px;
+}
+
+.waves-2 .shape-fill {
+    fill: #D5D0F6;
+}
 
 .portfolio{
   background-color: var(--header-bg-color);
