--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ h1{
 }
 
 /* navigation */
+.navbar-brand:hover{
+  animation: boop 0.6s;
+}
+
 nav {
   background-color: var(--primary-color);
 }
@@ -41,6 +45,8 @@ nav {
   font-size: 3rem;
 }
 
+
+
 .waves {
     position: absolute;
     top: 0;
@@ -60,6 +66,44 @@ nav {
 .waves .shape-fill {
     fill: var(--primary-color);
 }
+
+
+.layer-3{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 10s;
+}
+
+.layer-2{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 8s;
+}
+
+.layer-1{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 7s;
+}
+
+@keyframes wavy {
+  0%, 100% {
+    transform: scaleX(1.1);;
+  }
+  25%{
+    transform: scaleX(1.2);;
+  }
+  50%{
+    transform: scaleX(1.3);;
+  }
+  75%{
+    transform: scaleX(1.4);;
+  }
+}
+
 
 .nav-link{
   position:relative;
@@ -120,21 +164,58 @@ nav {
   margin-right: 4rem;
 }
 
+/* Trying boops on Git icon */
 
-.fa-html5:hover {
+
+.fa-git-alt:hover{
+color: #F05033;
+animation: boop 0.6s forwards;
+}
+
+@keyframes boop {
+  0%, 100% {
+    transform: rotate(0deg);
+  }
+  25%{
+    transform: rotate(10deg);
+  }
+  50%{
+    transform: rotate(-10deg);
+  }
+  75%{
+    transform: rotate(10deg);
+  }
+}
+
+
+
+
+/* End Booping */
+
+.fa-html5:hover{
   color: #e34c26;
+  animation: boop 0.6s forwards;
 }
 
 .fa-css3-alt:hover{
 color:#0065ff;
+animation: boop 0.6s forwards;
 }
 
 .fa-js:hover{
   color: #d8c12e;
+  animation: boop 0.6s forwards;
 }
 
 .fa-sass:hover{
   color: #CD6799;
+  animation: boop 0.6s forwards;
+}
+
+
+.fa-node:hover{
+  color: #8FC53F;
+  animation: boop 0.6s forwards;
 }
 
 .slantedDivA{
@@ -178,6 +259,44 @@ color:#0065ff;
 .waves-1 .shape-fill {
     fill: var(--secondary-color);
 }
+
+
+.layer-4{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 12s;
+}
+
+.layer-5{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 6s;
+}
+
+.layer-6{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 10s;
+}
+
+@keyframes wavy {
+  0%, 100% {
+    transform: scaleX(1.1);;
+  }
+  25%{
+    transform: scaleX(1.2);;
+  }
+  50%{
+    transform: scaleX(1.3);;
+  }
+  75%{
+    transform: scaleX(1.4);;
+  }
+}
+
 .about{
   background-color: #D5D0F6;
 }
