--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root {
-  --header-bg-color:#fde8cd;
   --primary-color: #00917c; 
   --secondary-color: #E9FEF8;
-  --tertiary-color: ;
+  --tertiary-color: #fde8cd;
+  --fifth-color: #D5D0F6;
 }
 
 * {
@@ -45,8 +45,6 @@ nav {
   font-size: 3rem;
 }
 
-
-
 .waves {
     position: absolute;
     top: 0;
@@ -66,7 +64,6 @@ nav {
 .waves .shape-fill {
     fill: var(--primary-color);
 }
-
 
 .layer-3{
 animation: wavy;
@@ -103,7 +100,6 @@ animation-duration: 7s;
     transform: scaleX(1.4);;
   }
 }
-
 
 .nav-link{
   position:relative;
@@ -164,9 +160,6 @@ animation-duration: 7s;
   margin-right: 4rem;
 }
 
-/* Trying boops on Git icon */
-
-
 .fa-git-alt:hover{
 color: #F05033;
 animation: boop 0.6s forwards;
@@ -187,11 +180,6 @@ animation: boop 0.6s forwards;
   }
 }
 
-
-
-
-/* End Booping */
-
 .fa-html5:hover{
   color: #e34c26;
   animation: boop 0.6s forwards;
@@ -211,7 +199,6 @@ animation: boop 0.6s forwards;
   color: #CD6799;
   animation: boop 0.6s forwards;
 }
-
 
 .fa-node:hover{
   color: #8FC53F;
@@ -260,7 +247,6 @@ animation: boop 0.6s forwards;
     fill: var(--secondary-color);
 }
 
-
 .layer-4{
 animation: wavy;
 animation-iteration-count: infinite;
@@ -282,23 +268,8 @@ animation-direction: alternate;
 animation-duration: 10s;
 }
 
-@keyframes wavy {
-  0%, 100% {
-    transform: scaleX(1.1);;
-  }
-  25%{
-    transform: scaleX(1.2);;
-  }
-  50%{
-    transform: scaleX(1.3);;
-  }
-  75%{
-    transform: scaleX(1.4);;
-  }
-}
-
 .about{
-  background-color: #D5D0F6;
+  background-color: var(--fifth-color);
 }
 
 .about h1{
@@ -329,18 +300,39 @@ animation-duration: 10s;
 }
 
 .waves-2 .shape-fill {
-    fill: #D5D0F6;
+    fill: var(--fifth-color);
+}
+
+.layer-7{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 11s;
+}
+
+.layer-8{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 10s;
+}
+
+.layer-9{
+animation: wavy;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-duration: 9s;
 }
 
 .portfolio{
-  background-color: var(--header-bg-color);
+  background-color: var(--tertiary-color);
   margin-bottom: 0;
   padding-bottom: 10px;
 }
 
 .card {
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
+  margin: 0 auto;
+  float: none; 
   margin-bottom: 10px;
 }
 .portfolio h1{
@@ -369,10 +361,20 @@ animation-duration: 10s;
   text-align: center;
 }
 
-.contact i{
-    padding-right: 2rem;
+.contact a{
+  text-decoration: none;
+  color: inherit;
 }
 
+.contact i:hover{
+  color: #fff;
+  transform: scale(1.3);
+}
+
+.contact i{
+    transition: 0.2s ease-in;
+    padding: 0 2rem 2rem 2rem;
+}
 
 @media all and (max-width: 900px){
     .welcome h1{
