--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #00917c; 
+  --primary-color: #00917c;
   --secondary-color: #E9FEF8;
   --tertiary-color: #fde8cd;
   --fifth-color: #D5D0F6;
@@ -10,12 +10,12 @@
   padding: 0;
 }
 
-h1{
+h1 {
   font-family: "Playfair Display", serif;
 }
 
 /* navigation */
-.navbar-brand:hover{
+.navbar-brand:hover {
   animation: boop 0.6s;
 }
 
@@ -46,173 +46,171 @@ nav {
 }
 
 .waves {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
 }
 
 .waves svg {
-    position: relative;
-    display: block;
-    width: calc(128% + 1.3px);
-    height: 66px;
+  position: relative;
+  display: block;
+  width: calc(128% + 1.3px);
+  height: 66px;
 }
 
 .waves .shape-fill {
-    fill: var(--primary-color);
+  fill: var(--primary-color);
 }
 
-.layer-3{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 10s;
+.layer-3 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 10s;
 }
 
-.layer-2{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 8s;
+.layer-2 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 8s;
 }
 
-.layer-1{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 7s;
+.layer-1 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 7s;
 }
 
 @keyframes wavy {
   0%, 100% {
-    transform: scaleX(1.1);;
+    transform: scaleX(1.1);
   }
-  25%{
-    transform: scaleX(1.2);;
+  25% {
+    transform: scaleX(1.2);
   }
-  50%{
-    transform: scaleX(1.3);;
+  50% {
+    transform: scaleX(1.3);
   }
-  75%{
-    transform: scaleX(1.4);;
+  75% {
+    transform: scaleX(1.4);
   }
 }
-
-.nav-link{
-  position:relative;
+.nav-link {
+  position: relative;
   font-family: "Playfair Display", serif;
 }
 
-.nav-link::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 0.175rem;
-    left: 0;
-    bottom: 0;
-    background: white;
-
-    transform: scale(0,1);
-    transition: transform 0.3s ease;
+.nav-link::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.175rem;
+  left: 0;
+  bottom: 0;
+  background: white;
+  transform: scale(0, 1);
+  transition: transform 0.3s ease;
 }
 
-.nav-link:hover::after{
-    transform: scale(1, 1);
+.nav-link:hover::after {
+  transform: scale(1, 1);
 }
 
-.welcome:hover .arrow{
-  transform: translateY(20%)
+.welcome:hover .arrow {
+  transform: translateY(20%);
 }
 
-.arrow{
+.arrow {
   margin-top: 2rem;
   font-size: 5rem;
   transition: transform 1s ease-in-out;
 }
 
 /* tech section */
-.tech{
+.tech {
   background-color: var(--secondary-color);
   padding-top: 10rem;
   text-align: center;
   position: relative;
 }
-.tech h1{
+
+.tech h1 {
   font-size: 4rem;
 }
 
-.tech img{
+.tech img {
   margin-top: 4rem;
 }
 
-.tech-icons{
+.tech-icons {
   margin-top: 2rem;
   padding-bottom: 0;
   font-size: 5rem;
   text-align: center;
 }
 
-.tech-icons i{
+.tech-icons i {
   text-align: center;
   margin-right: 4rem;
 }
 
-.fa-git-alt:hover{
-color: #F05033;
-animation: boop 0.6s forwards;
+.fa-git-alt:hover {
+  color: #F05033;
+  animation: boop 0.6s forwards;
 }
 
 @keyframes boop {
   0%, 100% {
     transform: rotate(0deg);
   }
-  25%{
+  25% {
     transform: rotate(10deg);
   }
-  50%{
+  50% {
     transform: rotate(-10deg);
   }
-  75%{
+  75% {
     transform: rotate(10deg);
   }
 }
-
-.fa-html5:hover{
+.fa-html5:hover {
   color: #e34c26;
   animation: boop 0.6s forwards;
 }
 
-.fa-css3-alt:hover{
-color:#0065ff;
-animation: boop 0.6s forwards;
+.fa-css3-alt:hover {
+  color: #0065ff;
+  animation: boop 0.6s forwards;
 }
 
-.fa-js:hover{
+.fa-js:hover {
   color: #d8c12e;
   animation: boop 0.6s forwards;
 }
 
-.fa-sass:hover{
+.fa-sass:hover {
   color: #CD6799;
   animation: boop 0.6s forwards;
 }
 
-.fa-node:hover{
+.fa-node:hover {
   color: #8FC53F;
   animation: boop 0.6s forwards;
 }
 
-.slantedDivA{
+.slantedDivA {
   position: relative;
-  width:100%;
+  width: 100%;
   height: 500px;
   background: var(--secondary-color);
 }
 
-.slantedDivA::after{
+.slantedDivA::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -228,103 +226,103 @@ animation: boop 0.6s forwards;
 
 /* about section */
 .waves-1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
 }
 
 .waves-1 svg {
-    position: relative;
-    display: block;
-    width: calc(128% + 1.3px);
-    height: 66px;
+  position: relative;
+  display: block;
+  width: calc(128% + 1.3px);
+  height: 66px;
 }
 
 .waves-1 .shape-fill {
-    fill: var(--secondary-color);
+  fill: var(--secondary-color);
 }
 
-.layer-4{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 12s;
+.layer-4 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 12s;
 }
 
-.layer-5{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 6s;
+.layer-5 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 6s;
 }
 
-.layer-6{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 10s;
+.layer-6 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 10s;
 }
 
-.about{
+.about {
   background-color: var(--fifth-color);
 }
 
-.about h1{
+.about h1 {
   text-align: center;
   padding-top: 4rem;
 }
 
-.about p{
+.about p {
   padding: 2rem 5rem 2rem 5rem;
   margin-bottom: 0;
 }
 
 /* Portfolio */
 .waves-2 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
 }
 
 .waves-2 svg {
-    position: relative;
-    display: block;
-    width: calc(128% + 1.3px);
-    height: 66px;
+  position: relative;
+  display: block;
+  width: calc(128% + 1.3px);
+  height: 66px;
 }
 
 .waves-2 .shape-fill {
-    fill: var(--fifth-color);
+  fill: var(--fifth-color);
 }
 
-.layer-7{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 11s;
+.layer-7 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 11s;
 }
 
-.layer-8{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 10s;
+.layer-8 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 10s;
 }
 
-.layer-9{
-animation: wavy;
-animation-iteration-count: infinite;
-animation-direction: alternate;
-animation-duration: 9s;
+.layer-9 {
+  animation: wavy;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 9s;
 }
 
-.portfolio{
+.portfolio {
   background-color: var(--tertiary-color);
   margin-bottom: 0;
   padding-bottom: 10px;
@@ -332,69 +330,71 @@ animation-duration: 9s;
 
 .card {
   margin: 0 auto;
-  float: none; 
+  float: none;
   margin-bottom: 10px;
 }
-.portfolio h1{
+
+.portfolio h1 {
   text-align: center;
   margin-bottom: 0;
   padding: 2rem;
 }
 
 /* Contact */
-.contact{
+.contact {
   background-color: var(--primary-color);
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.contact h1{
+.contact h1 {
   text-align: center;
   padding: 2rem;
   margin-bottom: 0;
   color: #fff;
 }
 
-.contact-icons{
-  padding-bottom: .5rem;
+.contact-icons {
+  padding-bottom: 0.5rem;
   font-size: 2rem;
   text-align: center;
 }
 
-.contact a{
+.contact a {
   text-decoration: none;
   color: inherit;
 }
 
-.contact i:hover{
+.contact i:hover {
   color: #fff;
   transform: scale(1.3);
 }
 
-.contact i{
-    transition: 0.2s ease-in;
-    padding: 0 2rem 2rem 2rem;
+.contact i {
+  transition: 0.2s ease-in;
+  padding: 0 2rem 2rem 2rem;
 }
 
-@media all and (max-width: 900px){
-    .welcome h1{
-        font-size: 3rem;
-    }
-    .welcome h2 {
-        font-size: 2rem;
-    }
-    .nav-link::after{
-        width: 15%;
-    }
+@media all and (max-width: 900px) {
+  .welcome h1 {
+    font-size: 3rem;
+  }
+
+  .welcome h2 {
+    font-size: 2rem;
+  }
+
+  .nav-link::after {
+    width: 15%;
+  }
 }
-
-
-
-
-
-
+contact i {
+  padding: 20px;
+}
 
 /*
 Comments: 
 Fix font sizes at smaller devices 
 */
+
+/*# sourceMappingURL=styles.css.map */
