--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -103,6 +104,7 @@ nav {
 .nav-link {
   position: relative;
   font-family: "Playfair Display", serif;
+    
 }
 
 .nav-link::after {
